# kanary_prompt

./: .gitignore  README  build_kanary.py  build_kanary.sh  load_kanary.py  pyproject.toml
conf/: build-kanary-from-config.yaml
conf/model/: canary-180m-flash.yaml  canary-1b-v2.yaml
kanary_prompt/: __init__.py  formatter.py
utils/: build_kanary_special_tokenizer.py  build_tokenizer_en.sh  build_tokenizer_spl.sh  download_nemo.py
